...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select date" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CkT-qP-wjK">
                                <rect key="frame" x="142" y="83" width="217" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="From date"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="217" id="CGP-Ph-ulB"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select date" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ess-hD-cld">
                                <rect key="frame" x="142" y="130" width="217" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="To date"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="8Tk-Lz-oaF"/>
...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$69" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BqX-jf-KkG">
                                                    <rect key="frame" x="243" y="0.0" width="100" height="50"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="History value of transaction"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="5El-bS-fou"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Food" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="49K-MF-us0">
                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="25"/>
                                                    <constraints>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$12030" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bZL-uD-HG9">
                                <rect key="frame" x="259" y="699" width="100" height="22"/>
                                <accessibility key="accessibilityConfiguration" identifier="Summary of history transaction"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="IHS-Tv-aeu"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="History" image="Icon-history" id="fah-rz-TNl">
                        <color key="badgeColor" systemColor="systemBackgroundColor"/>
                    </tabBarItem>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$1304" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s28-ef-yFg">
                                <rect key="frame" x="273" y="75" width="86" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="Monthly balance"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="fJb-gx-uHc"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$-58" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KhT-Tq-asg">
                                <rect key="frame" x="325.33333333333331" y="134" width="33.666666666666686" height="22"/>
                                <accessibility key="accessibilityConfiguration" identifier="Daily balance"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="22" id="Nn5-L5-9P8"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$12030" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tl0-Qk-43h">
                                <rect key="frame" x="302" y="173" width="57" height="22"/>
                                <accessibility key="accessibilityConfiguration" identifier="Total balance"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="22" id="BLY-sF-drX"/>
...
