...
    }
    func tableView(_ tableView: UITableView, editingStyleForRowAt indexPath: IndexPath) -> UITableViewCell.EditingStyle {
        return .none
    }

    func tableView(_ tableView: UITableView, trailingSwipeActionsConfigurationForRowAt indexPath: IndexPath) -> UISwipeActionsConfiguration? {
        let deleteAction = UIContextualAction(style: .destructive, title: "DELETE") { (rowAction, view, boolValue) in
            // Do this when press button DELETE
            let alertControler = UIAlertController(title: "Delete", message: "Do you really want to delete account \"\(SavingsManager.instance.getAllSavings()[indexPath.row].name!)\" ?", preferredStyle: .alert)
            let confirmAction = UIAlertAction(title: "Yes", style: .destructive, handler: { (alert) in

                self.removeSaving(atIndexPath: indexPath)
                SavingsManager.instance.fetchFromCoreData(completion: { (complete) in
...
